--- a/src/app/modules/main/menu-sidebar-partner/menu-sidebar-partner.component.html
+++ b/src/app/modules/main/menu-sidebar-partner/menu-sidebar-partner.component.html
@@ -14,11 +14,11 @@
     <!-- Sidebar user (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-            <img
+            <!-- <img
                 [src]="user.picture || 'assets/img/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
-            />
+            /> -->
         </div>
         <div class="info">
             <a [routerLink]="['/profile']" class="d-block" *ngIf="user">
