--- a/src/app/pages/customer/active-customer/active-customer.component.html
+++ b/src/app/pages/customer/active-customer/active-customer.component.html
@@ -7,7 +7,7 @@
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Active Customer</li>
+                    <li class="breadcrumb-item active">Active User</li>
                 </ol>
             </div>
         </div>
@@ -41,7 +41,7 @@
                         <button class="btn-sm btn-primary" (click)="exportAsXLSX()">Excel Download</button>
                     </div>
                     <div class="col-sm-2  text-right">
-                        <button class="btn-sm btn-primary" (click)="openAddCustomerModal(addCustomer)">Add Customer</button>
+                        <button class="btn-sm btn-primary" (click)="openAddCustomerModal(addCustomer)">Add User</button>
                     </div>
                 </div>
             </div>
@@ -124,16 +124,49 @@
                     <p class="form-group">
                       <label for="state">State </label>
                       <select class="form-control" name="state" formControlName="state">
-                        <option>Maharashtra</option>
+                        <option value="Andhra Pradesh">Andhra Pradesh</option>
+                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                        <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                        <option value="Assam">Assam</option>
+                        <option value="Bihar">Bihar</option>
+                        <option value="Chandigarh">Chandigarh</option>
+                        <option value="Chhattisgarh">Chhattisgarh</option>
+                        <option value="Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
+                        <option value="Daman and Diu">Daman and Diu</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Lakshadweep">Lakshadweep</option>
+                        <option value="Puducherry">Puducherry</option>
+                        <option value="Goa">Goa</option>
+                        <option value="Gujarat">Gujarat</option>
+                        <option value="Haryana">Haryana</option>
+                        <option value="Himachal Pradesh">Himachal Pradesh</option>
+                        <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                        <option value="Jharkhand">Jharkhand</option>
+                        <option value="Karnataka">Karnataka</option>
+                        <option value="Kerala">Kerala</option>
+                        <option value="Madhya Pradesh">Madhya Pradesh</option>
+                        <option value="Maharashtra">Maharashtra</option>
+                        <option value="Manipur">Manipur</option>
+                        <option value="Meghalaya">Meghalaya</option>
+                        <option value="Mizoram">Mizoram</option>
+                        <option value="Nagaland">Nagaland</option>
+                        <option value="Odisha">Odisha</option>
+                        <option value="Punjab">Punjab</option>
+                        <option value="Rajasthan">Rajasthan</option>
+                        <option value="Sikkim">Sikkim</option>
+                        <option value="Tamil Nadu">Tamil Nadu</option>
+                        <option value="Telangana">Telangana</option>
+                        <option value="Tripura">Tripura</option>
+                        <option value="Uttar Pradesh">Uttar Pradesh</option>
+                        <option value="Uttarakhand">Uttarakhand</option>
+                        <option value="West Bengal">West Bengal</option>
                       </select>
                     </p>
                 </div>
                 <div class="col-sm-6">
                     <p class="form-group">
                       <label for="city">City </label>
-                      <select class="form-control" name="city" formControlName="city">
-                        <option>Mumbai</option>
-                      </select>
+                      <input class="form-control" type="text" name="city" formControlName="city">
                     </p>
                 </div>
                 <div class="col-sm-6">
