--- a/src/app/pages/ride/manual-ride/manual-ride.component.html
+++ b/src/app/pages/ride/manual-ride/manual-ride.component.html
@@ -49,12 +49,14 @@
                                     <p class="form-group">
                                       <label for="city">Fuel Type </label>
                                       <select class="form-control" name="fueltype" formControlName="fueltype">
-                                        <option>With Fuel</option>
-                                        <option>Without Fuel</option>
+                                        <option>Petrol</option>
+                                        <option>Diesel</option>
+                                        <option>CNG</option>
+                                        <option>Electric</option>
                                       </select>
                                     </p>
                                 </div>
-                                <div class="col-sm-6">
+                                <!-- <div class="col-sm-6">
                                     <p class="form-group">
                                       <label for="city">Trip Type </label>
                                       <select class="form-control" name="triptype" formControlName="triptype">
@@ -62,10 +64,16 @@
                                         <option>Round Trip</option>
                                       </select>
                                     </p>
-                                </div>
+                                </div> -->
+                                <div class="col-sm-6">
+                                  <p class="form-group">
+                                    <label for="requesttime">Request Time </label>
+                                    <input type="datetime-local" class="form-control" formControlName="requesttime" name="requesttime">
+                                  </p>
+                              </div>
                                 <div class="col-sm-6">
                                     <p class="form-group">
-                                      <label for="vehicle_type">Vehicle Type </label>
+                                      <label for="vehicle_type">Car Model </label>
                                       <select class="form-control" name="vehicle_type" formControlName="vehicle_type">
                                         <option>Sydan</option>
                                         <option>SUV</option>
@@ -74,10 +82,12 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <p class="form-group">
-                                      <label for="vehicle_transmission">Vehicle Transmission </label>
+                                      <label for="vehicle_transmission">Vehicle Type </label>
                                       <select class="form-control" name="vehicle_transmission" formControlName="vehicle_transmission">
                                         <option>Manual</option>
                                         <option>Automatic</option>
+                                        <option>Electric</option>
+                                        <option>All</option>
                                       </select>
                                     </p>
                                 </div>
@@ -97,12 +107,6 @@
                                     <p class="form-group">
                                       <label for="dropaddress">Drop Address </label>
                                       <input type="text" class="form-control" placeholder="Search Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" formControlName="dropaddress" name="dropaddress" [(ngModel)]="dropaddress" #searchdrop>
-                                    </p>
-                                </div>
-                                <div class="col-sm-6">
-                                    <p class="form-group">
-                                      <label for="requesttime">Request Time </label>
-                                      <input type="datetime-local" class="form-control" formControlName="requesttime" name="requesttime">
                                     </p>
                                 </div>
                                 <!-- <div class="col-sm-6">
